# generator-vcpkg-cmake

./: LICENSE  README.md  package-lock.json  package.json
generators/app/: index.js
generators/app/templates/: CMakeLists.txt  Jenkinsfile  _gitignore  vcpkg.json
generators/app/templates/CppProject/: CMakeLists.txt  main.cc
